# my-mode-addon-api-demo

./: CMakeLists.txt  hello.cc  package-lock.json  package.json  run.bat
include/: CMakeProject1.h  mylib2.h
libs/: CMakeProject1.lib  mylib2.lib  opencv_core4100d.lib
